app/assets/stylesheets/application.css
/* ... */
#flag_dropdown a {
	background-color: var(--color-box-bg);
	border-bottom: 1px solid var(--color-box-border);
	color: var(--color-fg-contrast-10);
	display: block;
	padding: 3px;
	text-decoration: underline;
}
#flag_dropdown a:hover {
	background-color: var(--color-box-bg-shaded);
}

.caches {
	display: inline-block;
	position: relative;
}

.caches summary {
	list-style: none;
}

.caches ul {
	position: absolute;
	background: var(--color-bg);
	border: 1px solid var(--color-box-border);
	white-space: nowrap;
	list-style: none;
	padding: 0;
	z-index: 1;
}

.caches li {
	border-bottom: 1px solid var(--color-box-border);
}

.caches li:last-child {
	border-bottom: 0;
}

.caches a {
	color: var(--color-fg-contrast-7-5);
	text-decoration: none;
	display: block;
	padding: 3px 7px;
}

.caches a:hover {
	text-decoration: underline;
}

#flag_dropdown a.cancel-reason {
	background-color: var(--color-box-bg-shaded);
}

#modal_backdrop {
	position: fixed;
	width: 100%;
	height: 100%;
	left: 0;
	top: 0;
	bottom: 0;
	right: 0;
	z-index: 1;
}

.controls details {
	margin-left: auto;
}
.markdown_help summary {
	color: var(--color-fg-contrast-4-5);
	text-align: right;
}
.controls .markdown_help[open] summary {
	margin-top: calc(var(--comment-controls-height) * -1);
}

div#story_preview {
	margin-top: 2em;
	margin-left: 3.5em;
}

div#story_box input#story_url {
	width: 512px;
}
div#story_box button#story_fetch_title {
	height: 27px;
	padding-top: 1px;
	padding-bottom: 1px;
	width: 84px;
}
div#story_box input#story_title,
div#story_box input#story_moderation_reason,
div#story_box input#story_merge_story_short_id,
div#domain_box input[type=text] {
	width: 600px;
}
#story_box .url-updated,
#story_box .title-reminder,
#story_box .title-reminder-thanks,
#story_box .self-promo-warning
{
	display: none;
}
#story_box details ul {
	padding-left: 1em;
}
.slide-down {
	display: block !important;
	transition: height .5s ease !important;
}
div#story_box #story_tags {
	width: 624px;
	overflow-x: auto;
}
div#story_box textarea {
	height: 2rem;
	width: 600px;
}


div.comment_form_container form {
	margin-left: 40px;
	max-width: 45rem;
}

div.comment_form_container textarea {
	box-sizing: border-box;
	width: 100%;
}

.comment_unread {
	color: var(--color-fg-accent);
	font-weight: 600;
	cursor: pointer;
}

/* trees */

.tree,
.tree ul {
	margin: 0 0 0 0.5em;
	padding: 0;
	list-style: none;
	position: relative;
}

.tree ul {
	margin-left: 0.5em;
}

.tree:before,
.tree ul:before {
	border-left: 1px solid var(--color-fg-shape);
	bottom: 0;
	content: "";
	display: block;
	left: 0;
	position: absolute;
	top: 0;
	width: 0;
}

.tree li {
	margin: 0;
	padding: 0 1.1em;
	position: relative;
}

.tree li:before {
	border-top: 1px solid var(--color-fg-shape);
	content: "";
	display: block;
	height: 0;
	left: 0;
	margin-top: -1px;
	position: absolute;
	top: 0.8em;
	width: 8px;
}

.tree li:last-child:before {
	background-color: var(--color-bg);
	border-left: 0;
	bottom: 0;
	height: auto;
}

li.noparent:before,
ul.noparent:before {
	border-top: 0 !important;
	border-left: 0 !important;
}

ul.user_tree {
	color: var(--color-fg-contrast-4-5);
}

/* /~:username/standing */
/* https://codepen.io/sosuke/pen/Pjoqqp */
.unwarned {
	filter: invert(36%) sepia(52%) saturate(0%) hue-rotate(292deg) brightness(96%) contrast(85%);
}
.warned, .jaccuse {
	filter: invert(13%) sepia(85%) saturate(4911%) hue-rotate(356deg) brightness(78%) contrast(95%);
}
table.standing tr td { vertical-align: top; }
table.standing td:first-child { text-align: right }
td.warned div, td.unwarned div {
	display: inline-block;
	height: 1em;
	line-height: 1em;
	text-align: center;
	width: 1em;
}

/* /mod dashbaord */

.mod {
	color: var(--color-fg-accent);
}
.modmodlog .mod td:first-child {
	border-left: 2pt solid var(--color-fg-accent);
}
.nominal {
	color: var(--color-fg-accent);
	text-align: center;
}
.mod_activities {
	padding: 0;
}
.mod_activities li ul {
	list-style-type: none;
	padding: 0;
}
.mod_activities .moderation {
	list-style: '🕮';
}
.mod_activities .mod_mail {
	list-style: '✉';
}
.mod_activities .mod_note {
	list-style: '🔑';
}

/* data tables */

table.data th {
	background-color: var(--color-table-header-bg);
	border-bottom: 1px solid var(--color-table-header-border);
	border-top: 1px solid var(--color-table-header-border);
	text-align: left;
}
table.data th img {
	margin-bottom: 5px;
}

table.data th.r, table.data td.r {
	text-align: right;
	padding-right: 3px;
}

table.data th,
table.data td {
	padding: 0.25em 0.5em;
}

table.data tr.bold td {
	font-weight: bold;
}

table.data.zebra tr:nth-child(even) td,
.mod_activities li:nth-child(even) {
	background-color: var(--color-table-row-bg-even);
	border-bottom: 1px solid var(--color-table-row-border);
}
table.data.zebra tr:nth-child(odd) td,
.mod_activities li:nth-child(odd) {
	background-color: var(--color-table-row-bg-odd);
	border-bottom: 1px solid var(--color-table-row-border);
}
table.data tr.nobottom td {
	border-bottom: 0px;
	padding-bottom: 0px;

}
table.data tr.nobottom td.wrap {
	overflow-wrap: anywhere;
}
table.data.tall td {
	vertical-align: top;
}

table.data td p:first-child {
	margin-top: 0;
}
table.data td p:last-child {
	margin-bottom: 0;
}
table.data pre {
	overflow-x: scroll;
	max-width: 800px;
}
table.moderations tr > td:nth-child(1) {
	white-space: nowrap;
}

/* boxes */

.box label {
	display: block;
	float: left;
	margin-bottom: 4px;
}

label:has(+ *:required)::after,
label:has(+ *:not(label) *:required)::after,
label:has(+ *[type="hidden"] + *:required)::after {
	content: "*";
	margin-left: 0.15em;
	vertical-align: middle;
}
/* Labels on the (read-only) Profile page get extra contrast */
.profile dt::after {
	content: ":"/"";
}
.profile .hats {
	padding: 0;
}
.profile .hats li {
	display: inline-block;
}
.profile .hats li:not(:last-child)::after {
	content: ", "/""
}
.box img {
	vertical-align: middle;
}
.box label,
.box > span,
.box select,
.box br {
	line-height: 2em;
}
/* ... */

